[tool.poetry]
name = "redsys-rest-client"
version = "0.1.0"
description = "Python client for the Redsys payment platform's REST API"
authors = ["Alejandro Otero"]
license = "GPL-3.0-only"
readme = "README.md"
packages = [{include = "redsys_rest_client"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.30.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
isort = "^5.12.0"
ruff = "^0.0.265"
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
